# otw

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
commands/: bandit0.cmd  bandit1.cmd  bandit11.cmd  bandit12.cmd  bandit3.cmd  bandit4.cmd  bandit5.cmd  bandit6.cmd  bandit7.cmd  bandit8.cmd  bandit9.cmd
src/util/: fetcher.py
